--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,7 @@ name=WWW-DistroWatch-ReleaseInfo
 [Prereqs]
 perl=5.010001
 Mojo::DOM=0
+Mojo::UserAgent=0
 
 [Prereqs / DevelopRecommends]
 ;!lint_prereqs assume-used # spec
