[dist] Re-pass lint-prereqs (core modules must now be listed)

--- a/dist.ini
+++ b/dist.ini
@@ -9,10 +9,14 @@ name=WWW-DistroWatch-ReleaseInfo
 
 [Prereqs]
 perl=5.010001
+strict=0
+warnings=0
 Complete::Util=0
+Exporter=0
 Mojo::DOM=0
 Mojo::UserAgent=0
 
 [Prereqs / DevelopRecommends]
 ;!lint_prereqs assume-used # spec
 Rinci=1.1.0
+
