--- a/dist.ini
+++ b/dist.ini
@@ -16,7 +16,5 @@ Exporter=0
 Mojo::DOM=0
 Mojo::UserAgent=0
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.0
-
+[Prereqs / DevelopSuggests]
+_SPEC::Rinci=1.1.0
