[dist] Fix expressing follow-spec prereq relationship with x_spec

--- a/dist.ini
+++ b/dist.ini
@@ -16,5 +16,7 @@ Exporter=0
 Mojo::DOM=0
 Mojo::UserAgent=0
 
-[Prereqs / DevelopSuggests]
-_SPEC::Rinci=1.1.0
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.0
